--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -35,6 +35,9 @@
 		top: auto;
 		width: 100%;
 	}
+	@media(max-width: $screen-xs-max) {
+		height: 250px;
+	}
 }
 
 
