--- a/app/assets/stylesheets/modules/_newsletter_form.scss
+++ b/app/assets/stylesheets/modules/_newsletter_form.scss
@@ -14,6 +14,9 @@
 
   .form-control {
     width: 275px;
+    @media(max-width: $screen-xs-max) {
+    	width: auto;
+    }
   }
 
   // use
